--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -20,7 +20,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: List files
+      run: ls -la
     - name: Compile
-      run: rebar3 compile
-    - name: Run tests
-      run: rebar3 do eunit, ct
+      run: rebar3 compile -v
+    #- name: Run tests
+    #  run: rebar3 do eunit, ct
+    - name: Run reverse_polish_notation_evaluator
+      run: erl -noshell -s reverse_polish_notation_evaluator start -s init stop
