--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -19,7 +19,7 @@ jobs:
       image: erlang:22.0.7
 
     steps:
-    #- uses: actions/checkout@v3
+    - uses: actions/checkout@v3
     - name: List files
       run: ls -al
     - name: Compile
