--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -27,4 +27,4 @@ jobs:
     #- name: Run tests
     #  run: rebar3 do eunit, ct
     - name: Run reverse_polish_notation_evaluator
-      run: erl -noshell -s reverse_polish_notation_evaluator start -s init stop
+      run: erl -noshell -pa _build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
