--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -22,9 +22,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: List files
       run: ls -al
+    - name: cd dir
+      run: cd ./reverse_polish_notation_evaluator
     - name: Compile
       run: rebar3 compile
     #- name: Run tests
     #  run: rebar3 do eunit, ct
     - name: Run reverse_polish_notation_evaluator
-      run: erl -noshell -pa reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
+      run: erl -noshell -pa _build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
