--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -24,6 +24,8 @@ jobs:
       run: rebar3 compile
     #- name: Run tests
     #  run: rebar3 do eunit, ct
+    - name: List project dir
+      run: ls -al
     - name: List .beam files
       run: ls -al ./reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin
     - name: Run reverse_polish_notation_evaluator
