rebar.config fix

--- a/reverse_polish_notation_evaluator/rebar.config
+++ b/reverse_polish_notation_evaluator/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
-
+{out_dir, "/workspaces/parsers_in_erlang/reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin"}.
 {shell, [
   % {config, "config/sys.config"},
     {apps, [reverse_polish_notation_evaluator]}
