--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,12 @@
     // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+
         {
             "name": "Launch erlang",
             "type": "erlang",
             "request": "launch",
-            "cwd": "${workspaceRoot}"
+            "cwd": "${workspaceRoot}/reverse_polish_notation_evaluator"
         }
     ]
 }
