--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -29,4 +29,4 @@ jobs:
     - name: List .beam files
       run: ls -al ./reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin
     - name: Run reverse_polish_notation_evaluator
-      run: erl -noshell -pa reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
+      run: erl -noshell -pa ./reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
