--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -15,8 +15,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-      image: erlang:22.0.7
+    #container:
+    #  image: erlang:22.0.7
 
     steps:
     - uses: actions/checkout@v3
