--- a/.github/workflows/erlang.yml
+++ b/.github/workflows/erlang.yml
@@ -15,20 +15,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    container:
+      image: erlang:22.0.7
+
     steps:
     - uses: actions/checkout@v3
-    - name: Setup Erlang
-      uses: erlef/setup-erlang@v1
-      with:
-        otp-version: 22.0.7
-    - name: Install rebar3
-      run: |
-        wget https://github.com/erlang/rebar3/releases/download/3.16.1/rebar3 && chmod +x rebar3
-        sudo mv rebar3 /usr/local/bin/
-    - name: List files
-      run: ls -al
     - name: Compile
       run: rebar3 compile
+    #- name: Run tests
+    #  run: rebar3 do eunit, ct
+    - name: List project dir
+      run: ls -al
+    - name: List .beam files
+      run: ls -al ./reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin
     - name: Run reverse_polish_notation_evaluator
-      run: erl -noshell -pa _build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
-      
+      #run: erl -noshell -pa reverse_polish_notation_evaluator/_build/default/lib/reverse_polish_notation_evaluator/ebin -s reverse_polish_notation_evaluator start -s init stop
+      run: erl -noshell -eval 'code:load_file(reverse_polish_notation_evaluator), reverse_polish_notation_evaluator:start(), init:stop().'
